# flatwalk

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  index.html  pyproject.toml  tox.ini
.github/workflows/: build.yml  ci.yml  docs.yml  readthedocs-link.yml
docs/: design-docs-plan.md  storyline.md
docs/examples/: README.rst  plot_1_first_run.py  plot_2_beale_reference.py  plot_3_single_walker_ising.py  plot_4_replica_exchange_ising.py  plot_5_replica_exchange_ising.py  plot_6_checkpoint_resume.py  plot_7_trace_diagnostics.py  plot_beale_brute_force.py  plot_ising_validation.py
docs/src/: api.rst  conf.py  get-started.rst  index.rst  storyline.md  validation.md
docs/tools/: genlogo.py
docs/tutorials/: README.rst  plot_1_plain_mc.py  plot_3_one_over_t.py  plot_4_more_walkers.py  plot_5_replica_exchange.py  plot_5_windows_gluing.py  plot_6_thermodynamics.py
examples/: beale.py  ising.py  ising_batched.py  ising_rewl_validation.py  ising_validation.py  two_basin.py  wl_trajectory_demo.py  wl_viewer.py
examples/cache/: beale_L8.tsv
examples/cpm_nacl/: make_trajectory.py  nacl_contract.py  scan_maxdisp.sh  validate_fastpath.py  wl_electrode_charge.py
flatwalk/: __init__.py  binning.py  core.py  diagnostics.py  exchange.py  io.py  rewl.py  walker.py
latest/: api.html  genindex.html  index.html  searchindex.js  sg_execution_times.html
latest/_modules/: index.html
latest/_sources/: api.rst.txt  sg_execution_times.rst.txt
latest/auto_examples/: index.html  plot_1_minimal_contract.html  plot_2_beale_reference.html  plot_3_single_walker_ising.html  plot_4_batched_ising.html  plot_5_replica_exchange_ising.html  plot_6_checkpoint_resume.html  plot_7_trace_diagnostics.html  sg_execution_times.html
latest/auto_tutorials/: plot_1_plain_mc.html  plot_2_wang_landau.html  plot_3_one_over_t.html  plot_4_more_walkers.html  plot_5_windows_gluing.html  plot_6_replica_exchange.html  plot_7_thermodynamics.html  sg_execution_times.html
latest/intro/: install.html  quickstart.html  the-contract.html
latest/theory/: 04-density-of-states.html  10-validation.html
stable/: .buildinfo  api.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
stable/_sources/: api.rst.txt  (+1 more)
tests/: test_batched.py  test_beale.py  test_binning.py  test_checkpoint.py  test_core.py  test_diagnostics.py  test_imports.py  test_ising.py  test_rewl.py  test_validation_quick.py
(+126 files in other folders)
