[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flatwalk"
version = "0.1.0"
description = "Wang-Landau (flat-histogram) sampling driver with forward-compatible architecture for higher-D order parameters and replica exchange."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Henrik Jaeger" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
test = ["pytest>=7", "scipy>=1.10"]

[tool.setuptools.packages.find]
include = ["flatwalk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
