[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flatwalk"
version = "0.1.0"
description = "Wang-Landau (flat-histogram) sampling driver with forward-compatible architecture for higher-D order parameters and replica exchange."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Henrik Stooß" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/hejamu/flatwalk"
Repository = "https://github.com/hejamu/flatwalk"
Issues = "https://github.com/hejamu/flatwalk/issues"

[project.optional-dependencies]
test = ["pytest>=7"]
docs = [
    "sphinx>=7",
    "furo",
    "myst-parser",
    "sphinx-autodoc-typehints",
    "sphinx-gallery",
    "matplotlib",
    "pillow",
]
lint = [
    "ruff",
    "sphinx-lint",
]

[tool.setuptools.packages.find]
include = ["flatwalk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 92
target-version = "py310"

[tool.ruff.lint]
# Default rule set (pyflakes + pycodestyle errors) plus a few imports/style:
#   I  — isort
#   UP — pyupgrade
#   B  — flake8-bugbear
#   SIM — flake8-simplify
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line-too-long: handled by formatter
    "B028",  # warnings.warn without stacklevel — too noisy for examples
    "SIM102",  # nested `if`s with explanatory comments read better than `and`
    "SIM105",  # `try/except: pass` is clearer than `contextlib.suppress` here
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]  # bugbear's loop-variable rules clash with parametrised tests
"examples/*" = ["B"]
